<resources>
    <string name="app_name">Meeting Scheduling</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_groups">Group</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_settings">Settings</string>
    <string name="please_search_users">Please Search Users:</string>
    <string name="group_name">Group name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="users_chosen">Users chosen:</string>
    <string name="set_end_time">SET END TIME</string>
    <string name="save1">SAVE</string>
    <string name="send_verification_code_to_the_email">Send verification code to the email</string>
    <string name="back_home">Back Home</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name:</string>
    <string name="verification_code">Verification code:</string>
    <string name="password">Password:</string>
    <string name="email_address">Email Address:</string>
    <string name="view_time_slots">View Time Slots</string>
    <string name="v1_0">v1.0</string>
    <string name="log_out">Log Out</string>
    <string name="available_meetings">Available meetings:</string>
    <string name="unavailable_meetings">Unavailable meetings:</string>
    <string name="name1">Name</string>
    <string name="notes">Notes</string>
    <string name="please_choose_date_and_time">please choose DATE and TIME</string>
    <string name="hold_time">Hold Time</string>
    <string name="set_hold_date_and_time">SET HOLD DATE AND TIME</string>
    <string name="duration_min">Duration(min)</string>
    <string name="location">Location</string>
    <string name="deadline">Deadline</string>
    <string name="set_deadline">SET DEADLINE</string>
    <string name="meeting_id">Meeting Id:</string>
    <string name="meeting_name">Meeting name:</string>
    <string name="notes1">Notes:</string>
    <string name="hold_time1">Hold Time:</string>
    <string name="duration">Duration:</string>
    <string name="location1">Location:</string>
    <string name="deadline1">Deadline:</string>
    <string name="modify_meeting_information">MODIFY MEETING INFORMATION</string>
    <string name="name2">Name</string>
</resources>
