<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MeetingInfo">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_id"
        android:textSize="36sp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/meetingIdTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="27sp"
        android:textColor="#2196F3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_name"
        android:textSize="36sp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/meetingNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="27sp"
        android:textColor="#2196F3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes1"
        android:textSize="36sp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/meetingNotesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#2196F3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hold_time1"
        android:textSize="36sp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/meetingHoldTimeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#2196F3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="36sp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/meetingDurationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#2196F3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location1"
        android:textSize="36sp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/meetingLocationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#2196F3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deadline1"
        android:textSize="36sp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/meetingDeadlineTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#2196F3"/>
    <Button
        android:id="@+id/modifyMeetingInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_meeting_information"
        android:textSize="20sp"
        android:onClick="modifyMeeting"/>
</LinearLayout>