<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomePage"
    android:orientation="vertical">

    <!--all a TextView here as a title-->
    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_alignBottom="@id/navigation"></ListView>

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/navigation_groups"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_groups_black_24dp"
            android:title="@string/title_groups" />

        <ImageView
            android:id="@+id/navigation_schedule"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_schedule_black_24dp"
            android:title="@string/title_schedule" />

        <ImageView
            android:id="@+id/navigation_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_settings_black_24dp"
            android:title="@string/title_settings" />

    </LinearLayout>


</LinearLayout>