<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MeetingAdd">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/saveMeeting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/add_meeting_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            app:layout_constraintBottom_toTopOf="@id/add_meeting_notes"
            app:layout_constraintLeft_toRightOf="@id/aMNames"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/aMNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name2"
            app:layout_constraintBottom_toBottomOf="@id/add_meeting_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/add_meeting_name"
            app:layout_constraintTop_toTopOf="@id/add_meeting_name" />

        <EditText
            android:id="@+id/add_meeting_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            app:layout_constraintBottom_toTopOf="@id/add_meeting_time"
            app:layout_constraintLeft_toRightOf="@id/aMNotes"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_meeting_name" />

        <TextView
            android:id="@+id/aMNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            app:layout_constraintBottom_toBottomOf="@id/add_meeting_notes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/add_meeting_name"
            app:layout_constraintTop_toTopOf="@id/add_meeting_notes" />

        <TextView
            android:id="@+id/add_meeting_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/please_choose_date_and_time"
            app:layout_constraintBottom_toTopOf="@id/holdTimeButton"
            app:layout_constraintLeft_toRightOf="@id/holdTime"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_meeting_notes" />

        <TextView
            android:id="@+id/holdTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold_time"
            app:layout_constraintBottom_toBottomOf="@id/add_meeting_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/add_meeting_time"
            app:layout_constraintTop_toTopOf="@id/add_meeting_time" />


        <Button
            android:id="@+id/holdTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="setHoldTime"
            android:text="@string/set_hold_date_and_time"
            app:layout_constraintBottom_toTopOf="@id/add_meeting_duration"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_meeting_time" />

        <EditText
            android:id="@+id/add_meeting_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@id/add_meeting_location"
            app:layout_constraintLeft_toRightOf="@id/Duration"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/holdTimeButton" />

        <TextView
            android:id="@+id/Duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_min"
            app:layout_constraintBottom_toBottomOf="@id/add_meeting_duration"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/add_meeting_duration"
            app:layout_constraintTop_toTopOf="@id/add_meeting_duration" />

        <EditText
            android:id="@+id/add_meeting_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            app:layout_constraintBottom_toTopOf="@id/add_meeting_deadline"
            app:layout_constraintLeft_toRightOf="@id/Location"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_meeting_duration" />

        <TextView
            android:id="@+id/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:layout_constraintBottom_toBottomOf="@id/add_meeting_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/add_meeting_location"
            app:layout_constraintTop_toTopOf="@id/add_meeting_location" />

        <TextView
            android:id="@+id/add_meeting_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/please_choose_date_and_time"
            app:layout_constraintBottom_toTopOf="@id/DeadlineTimeButton"
            app:layout_constraintLeft_toRightOf="@id/deadline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_meeting_location" />

        <TextView
            android:id="@+id/deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline"
            app:layout_constraintBottom_toBottomOf="@id/add_meeting_deadline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/add_meeting_deadline"
            app:layout_constraintTop_toTopOf="@id/add_meeting_deadline" />


        <Button
            android:id="@+id/DeadlineTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="setDeadlineTime"
            android:text="@string/set_deadline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_meeting_deadline" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/saveMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveMeeting"
        android:text="SAVE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPart" />

</androidx.constraintlayout.widget.ConstraintLayout>